1.8
	- almost total conversion to C++. Except for introducing
          new bugs, this should not change much.

1.7  Fri Jan 30 16:50:11 CET 2004
	- further cleanups.
        - never do last-minute-changes: restore ability to have
          color + bold ass high-intensity, and let the selection
          use reverse video, not _blink_.
        - remove OPTION_HC, at least temporarily. If you want it back,
          please drop me a note.

1.6  Fri Jan 30 00:34:01 CET 2004
	- cleanups, minor bugfixes.
        - blinking text.
        - normal text color + bold gets white text instead of
          normal text when colorBD is not set.
        (- support double-byte characters (by blocking).)
          was not implemented

1.5  Thu Jan 29 00:43:48 CET 2004
	- share io manager between rxvt-unicode and vpe
        - bugfix for --disable-utmp, reported by fefe himself
        - colors were sometimes not used correctly because
          parts of the code expected a monochrome display.
          reported by fefe
        - make it compile without pointer_blank, reported by
          Markus Demleitner
        - improved selection support, now supports UTF8_STRING
          and properly encodes CUT_BUFFER0 in iso-8859-1
        - completely removed non-working graphics mode

1.4  Fri Jan 16 23:03:22 CET 2004
	- fix stupid segfault on esc-c
        - small font tunings
        - much better io manager, less bugs, higher speed
        - better error reporting for unknown options

1.3  2003-12-26
        - fix a bug in font height selection
        - autoscale scalable x11 fonts
        - slow-mode xft rendering centers characters
        - much faster x11 font selecti

1.2  2003-12-24
        - fix another segfault-on-resize-bug form the original rxvt
        - better font matching
        - better memory management (less memory)
        - new fallback: gnu freefont

1.1  2003-12-18
        - Support for XIM in other than the current locale.