@@ -1,6 +1,7 @@
 1.8
 	- almost total conversion to C++. Except for introducing
           new bugs, this should not change much.
+        - fix and re-enable background pixmap and inherit pixmap support.
 
 1.7  Fri Jan 30 16:50:11 CET 2004
 	- further cleanups.
